--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           />
           <div class="post-text-container">
             <div class="post-username-container">
-              <span>Danny Thompson</span>
+              <span>Ali</span>
               <svg
                 class="verified"
                 viewBox="-3 -4 24 24"
