--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </svg>
     </div>
     <main>
-      <!-- first section -->
+      <!-- header for mobile screens -->
       <section class="feed">
         <div class="logo-container">
           <img
@@ -46,31 +46,31 @@
           </div>
         </header>
 
-        <!-- for bigger screens -->
+        <!-- header for bigger screens -->
         <div class="home">
           <div class="home-container">
-          <h1>Home</h1>
-          <img
-            src="https://pbs.twimg.com/profile_images/1620106569236246529/uRZcbsLg_400x400.jpg"
-            alt="pfp"
-            class="pfp"
-          />
-          <img
-            src="https://seeklogo.com/images/T/twitter-x-logo-101C7D2420-seeklogo.com.png?v=638258077300000000"
-            alt="logo"
-            class="logo"
-          />
-        </div>
-        <div class="header">
-          <div class="home-tabs flex">
-            <div class="tab1">
-              <span>For you</span>
-            </div>
-            <div class="tab2">
-              <span>Following</span>
+            <h1>Home</h1>
+            <img
+              src="https://pbs.twimg.com/profile_images/1620106569236246529/uRZcbsLg_400x400.jpg"
+              alt="pfp"
+              class="pfp"
+            />
+            <img
+              src="https://seeklogo.com/images/T/twitter-x-logo-101C7D2420-seeklogo.com.png?v=638258077300000000"
+              alt="logo"
+              class="logo"
+            />
+          </div>
+          <div class="header">
+            <div class="home-tabs flex">
+              <div class="tab1">
+                <span>For you</span>
+              </div>
+              <div class="tab2">
+                <span>Following</span>
+              </div>
             </div>
           </div>
-        </div>
         </div>
 
         <!-- feed posts start here -->
@@ -833,7 +833,121 @@
           </svg>
         </div>
       </nav>
-      <section class="right"></section>
+      <section class="right">
+        <div class="container-right">
+          <div class="search-wrapper">
+            <div class="container-search">
+              <svg
+                class="search-bar-icon"
+                viewBox="0 -8 24 20"
+                width="16"
+                height="24"
+                fill="gray"
+              >
+                <path
+                  d="M10.25 3.75c-3.59 0-6.5 2.91-6.5 6.5s2.91 6.5 6.5 6.5c1.795 0 3.419-.726 4.596-1.904 1.178-1.177 1.904-2.801 1.904-4.596 0-3.59-2.91-6.5-6.5-6.5zm-8.5 6.5c0-4.694 3.806-8.5 8.5-8.5s8.5 3.806 8.5 8.5c0 1.986-.682 3.815-1.824 5.262l4.781 4.781-1.414 1.414-4.781-4.781c-1.447 1.142-3.276 1.824-5.262 1.824-4.694 0-8.5-3.806-8.5-8.5z"
+                ></path>
+              </svg>
+              <input type="text" class="search-bar" placeholder="Search" />
+            </div>
+          </div>
+          <div class="Premium card">
+            <h1>Subscribe to Premium</h1>
+            <p>
+              Subscribe to unlock new features and if eligible, receive a share
+              of ads revenue.
+            </p>
+            <button class="subscribe button">Subscribe</button>
+          </div>
+          <div class="card explore">
+            <h1>What’s happening</h1>
+            <div class="container-explore">
+              <span>Trending</span>
+              <h5>#LeaveTwitterElon</h5>
+              <span>6,166 posts</span>
+            </div>
+            <div class="container-explore">
+              <span>Technology</span>
+              <h5>Apple</h5>
+              <span>6,166 posts</span>
+            </div>
+            <div class="container-explore">
+              <span>Business & finance · Trending</span>
+              <h5>Gen Z</h5>
+              <span>6,166 posts</span>
+            </div>
+            <div class="container-explore">
+              <span>Trending in India</span>
+              <h5>Bengaluru</h5>
+              <span>6,166 posts</span>
+            </div>
+            <h6 class="showmore">Show more</h6>
+          </div>
+          <div class="card">
+            <h1>Who to follow</h1>
+            <div class="container-follow flex">
+              <img
+                src="https://i.pinimg.com/564x/c8/9a/95/c89a95b93677318157e3259a8e99e43b.jpg"
+                alt="photo"
+              />
+              <div>
+                <span>Ippo</span>
+                <br />
+                <span class="user-handle">@makinouchiippo</span>
+              </div>
+              <button class="button"></button>
+              <button class="button follow">Follow</button>
+            </div>
+            <div class="container-follow flex">
+              <img
+                src="https://i.pinimg.com/736x/ec/e2/b0/ece2b0f541d47e4078aef33ffd22777e.jpg"
+                alt="photo"
+              />
+              <div>
+                <span>Shivsagar_Dev</span>
+                <br />
+                <span class="user-handle">@CheezzyPizzZa</span>
+              </div>
+              <button class="button"></button>
+              <button class="button follow">Follow</button>
+            </div>
+            <div class="container-follow flex">
+              <img
+                src="https://i.pinimg.com/736x/ec/e2/b0/ece2b0f541d47e4078aef33ffd22777e.jpg"
+                alt="photo"
+              />
+              <div>
+                <span>Dev_John_141</span>
+                <br />
+                <span class="user-handle">@devdev1412</span>
+              </div>
+              <button class="button"></button>
+              <button class="button follow">Follow</button>
+            </div>
+            <div class="container-follow flex">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSFot_CjQA9mkZtz3y4861VHLIme95sw_M0A"
+                alt="photo"
+              />
+              <div>
+                <span>PickleRick</span>
+                <br />
+                <span class="user-handle">@itsmepicklerick</span>
+              </div>
+              <button class="button"></button>
+              <button class="button follow">Follow</button>
+            </div>
+          </div>
+          <div class="container-terms-of-service">
+            <span>Terms of service</span>
+            <span>Privacy Policy</span>
+            <span>Cookie Policy</span>
+            <span>Accesibility</span>
+            <span>Ads info &nbsp;More ···</span>
+            <span>© 2023 X Corp.</span>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
