--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home/X</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <link
       rel="icon"
       href="https://pbs.twimg.com/profile_images/1683325380441128960/yRsRRjGO_400x400.jpg"
